Fix button miss alignment due to text wrap

--- a/src/components/utility/Button/Button.module.css
+++ b/src/components/utility/Button/Button.module.css
@@ -11,6 +11,7 @@
   border-radius: 24px;
   cursor: pointer;
   font-size: 1.125rem;
+  text-wrap: nowrap;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   background-color: var(--button-background-color);
   color: var(--button-color);
